# detecdiv-hub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CURRENT_DEPLOYMENT.md  JOB_EXECUTION_EVOLUTION.md  LABGURU_CONNECTOR_PLAN.md  PROJECT_STATUS.md  README.md  SMOKE_TEST_RESULTS.md  TEST_ORPHAN_DETECTION.md  constraints.txt  pyproject.toml  todo_ui.md
.claude/: settings.local.json
api/: __init__.py  app.py  config.py  db.py  jupyterhub_auth.py  models.py  routes_acquisition_sessions.py  routes_auth.py  routes_backup.py  routes_dashboard.py  routes_execution_targets.py  routes_experiments.py  routes_external_systems.py  routes_indexing.py  routes_jobs.py  routes_micromanager_ingest.py  routes_migrations.py  routes_pipeline_runs.py  routes_pipelines.py  routes_projects.py  routes_raw_datasets.py  routes_storage.py  schemas.py
db/: schema.sql
docs/: acquisition_widget_contract.md  architecture.md  backup.md  deployment_installation.md  dev_deploy_workflow.md  development.md  install_client.md  install_server.md  micromanager_user_landing_zones.md  misc_storage_inventory.md  ops-deploy.md  pipeline_dependency_hub_ui_spec.md  pipeline_dependency_matlab_spec.md  pipeline_path_policy.md  pipeline_run_contract.md  space_admin_synthesis.md  user_home_storage_provider.md
scripts/: audit_storage_ssh.py  backfill_nd2_metadata.py  bootstrap_db.py  compact_raw_dataset_metadata.py  configure_worker_systemd.sh  dev_api.ps1  dev_tunnel.ps1  import_catalog_sqlite.py  index_project_root.py  install_systemd.sh  migrate_raw_preview_artifacts.py  provision_users_from_data_dirs.py  relocate_raw_preview_files.py  run_api.ps1  run_api.sh  run_worker.ps1  run_worker.sh  (+5 more)
(+136 files in other folders)
