[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detecdiv-hub"
version = "0.1.0"
description = "Central catalog and job orchestration layer for DetecDiv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "numpy>=2.1",
    "tifffile>=2024.8.30",
    "zarr>=2.18",
    "numcodecs<0.16",
    "imageio-ffmpeg>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.6",
]
jupyterhub = [
    "jupyterhub>=5",
]

[tool.setuptools]
packages = ["api", "worker", "worker.executors"]

[tool.setuptools.package-data]
api = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
